--- a/style.css
+++ b/style.css
@@ -42,12 +42,100 @@ button{
   margin-left: .5em;
 }
 
-.msgBoxDivStyle {
+.msgBoxDiv {
   background: rgba(127, 127, 127, 0.6);
   height: 100%;
   position: absolute;
   width: 100%;
   z-index: 9999;
+}
+
+.msgBoxTitle{
+ background-color: #00478A;
+ color: white;
+ font-size: 20px;
+ font-weight: bold;
+ left: 0px;
+ padding: 4px;
+ text-align: left;
+ top: 0px;
+}
+
+.msgBoxContents{
+  background: rgba(255, 255, 255, 1);
+  background-color: white;
+  border: 1px solid black;
+  box-shadow: 6px 6px 6px #070707;
+  left: 30%;
+  position: absolute;
+  resize: vertical;
+  text-align: center;
+  top: 15%;
+  width: 40%;
+}
+
+.msgBoxText{
+  font-size: 18px;
+  overflow: auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.msgBoxButton{
+  margin: 20px;
+}
+
+.msgBoxWarningTitle{
+  background-color: orange;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  left: 0px;
+  padding: 4px;
+  text-align: left;
+  top: 0px;
+}
+
+.msgBoxErrorTitle{
+  background-color: red;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  left: 0px;
+  padding: 4px;
+  text-align: left;
+  top: 0px;
+}
+
+.msgBoxSuccessTitle{
+  background-color: green;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  left: 0px;
+  padding: 4px;
+  text-align: left;
+  top: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
