--- a/style.css
+++ b/style.css
@@ -36,21 +36,24 @@ textarea{
 .btn{
   padding-left: 10px; 
   padding-right: 10px;
+  color:white;
 }
 
 button{
   margin-left: .5em;
 }
 
+/* popup box settings */
+
 .msgBoxDiv {
   height: 100%;
-  position: absolute;
+  position: relative;
   width: 100%;
   z-index: 9999;
 }
 
 .msgBoxTitle{
- background-color: #00478A;
+ background-color: #1a1aff;
  color: white;
  font-size: 20px;
  font-weight: bold;
@@ -66,7 +69,7 @@ button{
   border: 1px solid black;
   box-shadow: 6px 6px 6px #070707;
   left: 30%;
-  position: absolute;
+  position: relative;
   resize: vertical;
   text-align: center;
   top: 15%;
@@ -85,7 +88,7 @@ button{
 }
 
 .msgBoxWarningTitle{
-  background-color: orange;
+  background-color: #ff9900;
   color: white;
   font-size: 20px;
   font-weight: bold;
@@ -96,7 +99,7 @@ button{
 }
 
 .msgBoxErrorTitle{
-  background-color: red;
+  background-color: #ff3300;
   color: white;
   font-size: 20px;
   font-weight: bold;
@@ -107,7 +110,7 @@ button{
 }
 
 .msgBoxSuccessTitle{
-  background-color: green;
+  background-color: #339933;
   color: white;
   font-size: 20px;
   font-weight: bold;
