--- a/style.css
+++ b/style.css
@@ -13,11 +13,9 @@ label {
 }
 
 input, textarea {
-  font: 1em sans-serif;
+  font: 1em;
   width: 300px;
   height: 300px;
-  /* what is this? */
-  -moz-box-sizing: border-box ;
   box-sizing: border-box;
   border: 1px solid #999;
 }
@@ -31,6 +29,10 @@ textarea{
   height: 5em;
   /* doesnt work on all browsers */
   resize: vertical;
+}
+
+.addMsg {
+  font-family: Arial, Helvetica;
 }
 
 .btn{
@@ -55,6 +57,7 @@ button{
 .msgBoxTitle{
  background-color: #1a1aff;
  color: white;
+ font-family: Arial, Helvetica;
  font-size: 20px;
  font-weight: bold;
  left: 0px;
@@ -66,6 +69,7 @@ button{
 .msgBoxContents{
   background: rgba(255, 255, 255, 1);
   background-color: white;
+  font-family: Arial, Helvetica;
   border: 1px solid black;
   box-shadow: 6px 6px 6px #070707;
   left: 30%;
